--- a/blzwpf/MainWindow.xaml
+++ b/blzwpf/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:lib="clr-namespace:blzcomponents;assembly=blzcomponents"
         xmlns:blazor="clr-namespace:Microsoft.AspNetCore.Components.WebView.Wpf;assembly=Microsoft.AspNetCore.Components.WebView.Wpf"
         mc:Ignorable="d"
-        Title="XMASDEV 2021" Height="450" Width="800">
+        Title="Blazor Everywhere" Height="450" Width="800">
     <Grid>
         <blazor:BlazorWebView HostPage="wwwroot/index.html" Services="{StaticResource services}">
             <blazor:BlazorWebView.RootComponents>
